Fix ALL POST failures: CORS headers incompatible with credentials, OPTIONS preflight blocked by JWT filter